* Implement Volume down,up and Mute buttons polling for ectype 2
   It was the last missing part from the "omke" module which never
   got ported to linux 2.6
* Implement ectype 13 Fn hotkeys handling.
* DMI signature added:
	HP Pavilion ze4500 (ectype 7)
	Toshiba Satellite 1130 (ectype 1)
	Toshiba Satellite A75 (ectype 12)
	Toshiba Tecra A4 (ectype 13)
	Toshiba Satellite A80 (ectype 12)
* Split TSM30X (ectype 12) : this ectype was reimplemented and if the
  new implementation works with Toshiba M40X, M70, M100... it does not
  (and will never, due to hardware) with Toshiba M30X, the only way
  to fix this is to split TSM30X (ectype 12) in :
  -TSM70 (ectype 12) => new implementation (compal.c & acpi.c backends)
  -TSM30X (ectype 15) => old implementation (legacy backends)
  This is done by renaming TSM30X to TSM40 and restore old TSM30X
  The state of the Toshiba M35X is unknown and is assigned to TSM70, one
  should send a bug report if that fail.
  Fix bugs 1617818 and 1605278

2.20060921 Mathieu Bérard <math_b@users.sourceforge.net>
* The minimal required kernel version is now 2.6.9 (kref API)
* Convert semaphore to mutex with fallback for pre 2.6.16 kernel
* Kill CONFIG_OMNIBOOK_APMEMU and introduce OMNIBOOK_LEGACY:
  pre-ACPI features now depends on it.
  Default enabling of ac and battery features also
  depends on it. It is _disabled_ by default.
* Introduce ACPI methods execution backend: TSM70 needs it
  for Display and Wifi/Bluetooth features
* Expand display and hotkeys features
* Introduce experimental NbSmi backend for TSM40. It is
  based on technical documentation provided by Toshiba.
  Thanks Toshiba !
* Kill unused omnibook_mem_read/write function for mmio
  access
* Cleanup in blank.c fan.c temperature.c
* Unbreak Pio backend: use request/release_region
* Introduce bluetooth and wifi frontend features : they allow
  adapter state querry and control (existence probing, wifi
  kill switch probing and adapter enabling/disabling).